# pizza-price-predictor

./: README.md  app.py  pizzas.csv  pyproject.toml  testes.ipynb
projeto_ml/: app.py  pizzas.csv  pyproject.toml
